# atmega-template

./: .gitignore  Cargo.toml  cargo-generate.toml
src/: lib.rs  main.rs
